--- a/Beacon/Base.lproj/Main.storyboard
+++ b/Beacon/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C68" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jZL-62-iGF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jZL-62-iGF">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -24,7 +24,7 @@
         <scene sceneID="Ya7-mk-1gb">
             <objects>
                 <navigationController navigationBarHidden="YES" id="jZL-62-iGF" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Fb0-0q-k5X">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="Fb0-0q-k5X">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -101,7 +101,7 @@
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.0" contentMode="scaleToFill" ambiguous="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="fdz-VW-BjX">
+                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.0" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="fdz-VW-BjX">
                                         <rect key="frame" x="-16" y="-5" width="375" height="487"/>
                                     </mapView>
                                 </subviews>
@@ -310,6 +310,7 @@
                         <outlet property="titleTextField" destination="r8f-7K-y9i" id="gcv-TY-4Nq"/>
                         <outlet property="topView" destination="AhR-ID-qyr" id="Dtq-YH-kH7"/>
                         <segue destination="Ued-HE-7Fh" kind="show" identifier="showBusinessDetail" id="mXz-VS-RQJ"/>
+                        <segue destination="HJq-Ks-s6Y" kind="show" identifier="showAddPlaces" id="iUq-WI-UGN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M1c-Hv-QjE" sceneMemberID="firstResponder"/>
@@ -937,7 +938,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="109" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ph0-54-isA">
-                                <rect key="frame" x="-4" y="0.0" width="383" height="667"/>
+                                <rect key="frame" x="-4" y="60" width="383" height="607"/>
                                 <color key="backgroundColor" red="0.89411764709999997" green="0.89411764709999997" blue="0.89411764709999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="sectionIndexBackgroundColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="sectionIndexTrackingBackgroundColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -947,68 +948,70 @@
                                     <outlet property="delegate" destination="HJq-Ks-s6Y" id="Vw4-W8-Jkw"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jb0-Gp-vrZ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GrX-Gc-LwH">
+                                        <rect key="frame" x="15" y="22" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="DDz-7o-Jdm"/>
+                                            <constraint firstAttribute="width" constant="30" id="DJV-Zc-1k7"/>
+                                        </constraints>
+                                        <connections>
+                                            <segue destination="oNf-Zv-LG5" kind="unwind" unwindAction="unwindToSearchBusinessVCWithSearch:" id="h1K-ba-iIb"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eOm-nH-mIq">
+                                        <rect key="frame" x="330" y="22" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="am0-E5-CeN"/>
+                                            <constraint firstAttribute="height" constant="30" id="yFO-Yh-gqW"/>
+                                        </constraints>
+                                    </button>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Food, Tacos, Pho, etc..." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oMw-jd-g1M">
+                                        <rect key="frame" x="66" y="22" width="243" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="gUe-wA-IaJ"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" red="0.32156862749999998" green="0.6705882353" blue="0.75294117650000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="GrX-Gc-LwH" firstAttribute="top" secondItem="Jb0-Gp-vrZ" secondAttribute="top" constant="22" id="13s-Hl-4ce"/>
+                                    <constraint firstAttribute="trailing" secondItem="eOm-nH-mIq" secondAttribute="trailing" constant="15" id="3Mc-lr-J0K"/>
+                                    <constraint firstItem="oMw-jd-g1M" firstAttribute="centerY" secondItem="Jb0-Gp-vrZ" secondAttribute="centerY" constant="7" id="ADI-dQ-DHA"/>
+                                    <constraint firstAttribute="height" constant="60" id="UXI-1y-1hv"/>
+                                    <constraint firstAttribute="bottom" secondItem="eOm-nH-mIq" secondAttribute="bottom" constant="8" id="VJ9-OW-ROT"/>
+                                    <constraint firstAttribute="bottom" secondItem="GrX-Gc-LwH" secondAttribute="bottom" constant="8" id="g2F-bQ-5Gf"/>
+                                    <constraint firstItem="GrX-Gc-LwH" firstAttribute="leading" secondItem="Jb0-Gp-vrZ" secondAttribute="leading" constant="15" id="iBS-s4-wze"/>
+                                    <constraint firstItem="oMw-jd-g1M" firstAttribute="centerX" secondItem="Jb0-Gp-vrZ" secondAttribute="centerX" id="pci-l6-5Qr"/>
+                                    <constraint firstItem="eOm-nH-mIq" firstAttribute="top" secondItem="Jb0-Gp-vrZ" secondAttribute="top" constant="22" id="xjb-5M-xOD"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Ph0-54-isA" firstAttribute="top" secondItem="zSM-Pb-vSN" secondAttribute="topMargin" id="JIc-iw-Unx"/>
+                            <constraint firstItem="Jb0-Gp-vrZ" firstAttribute="top" secondItem="zSM-Pb-vSN" secondAttribute="top" id="2eP-c6-HCA"/>
                             <constraint firstItem="Ph0-54-isA" firstAttribute="leading" secondItem="zSM-Pb-vSN" secondAttribute="leadingMargin" constant="-20" id="KJZ-zI-zmD"/>
+                            <constraint firstItem="Jb0-Gp-vrZ" firstAttribute="leading" secondItem="zSM-Pb-vSN" secondAttribute="leading" id="eBY-55-0pn"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Ph0-54-isA" secondAttribute="trailing" constant="-20" id="k9S-D8-JKc"/>
+                            <constraint firstItem="Ph0-54-isA" firstAttribute="top" secondItem="Jb0-Gp-vrZ" secondAttribute="bottom" id="t9v-cK-mWW"/>
+                            <constraint firstAttribute="trailing" secondItem="Jb0-Gp-vrZ" secondAttribute="trailing" id="vMm-ku-99n"/>
                             <constraint firstItem="Vhe-Ze-TZ7" firstAttribute="top" secondItem="Ph0-54-isA" secondAttribute="bottom" id="yTP-fs-oVj"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="B9u-9y-ccc">
-                        <nil key="title"/>
-                        <barButtonItem key="leftBarButtonItem" title="Done" id="fUN-a0-Tpb">
-                            <connections>
-                                <segue destination="oNf-Zv-LG5" kind="unwind" identifier="unwindToPlaylist" unwindAction="unwindToSinglePlaylist:" id="FBp-fk-zMD"/>
-                            </connections>
-                        </barButtonItem>
-                        <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search Places" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" id="YrA-vD-5KA">
-                            <rect key="frame" x="133" y="7" width="110" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="13"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </textField>
-                    </navigationItem>
                     <connections>
-                        <outlet property="addPlaceSearchTextField" destination="YrA-vD-5KA" id="Y4B-Zv-Lvj"/>
-                        <outlet property="navBarTitleLabel" destination="B9u-9y-ccc" id="Ksu-zO-VKd"/>
+                        <outlet property="addPlaceSearchTextField" destination="oMw-jd-g1M" id="BtD-pg-lgx"/>
                         <outlet property="tableView" destination="Ph0-54-isA" id="edQ-kI-Ybq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yzz-qW-Bt5" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="oNf-Zv-LG5" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1489" y="948"/>
-        </scene>
-        <!--Search-->
-        <scene sceneID="Wwq-Lb-MUW">
-            <objects>
-                <navigationController id="uN1-Np-z4C" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Search" image="search_icon" selectedImage="search_icon" id="Slq-KJ-fzc" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="color" keyPath="iconColor">
-                                <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="color" keyPath="textColor">
-                                <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                    </tabBarItem>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="AsB-u9-2If">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="HJq-Ks-s6Y" kind="relationship" relationship="rootViewController" id="vp2-3Y-0lP"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="31b-0R-c7y" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="610" y="948"/>
+            <point key="canvasLocation" x="1488.8" y="947.67616191904051"/>
         </scene>
     </scenes>
     <resources>
@@ -1019,7 +1022,6 @@
         <image name="detail_action_route" width="16" height="16"/>
         <image name="more" width="26" height="6"/>
         <image name="restaurant_Icon" width="16" height="16"/>
-        <image name="search_icon" width="16" height="16"/>
         <image name="sf" width="1500" height="830"/>
         <image name="temp_rating" width="16" height="16"/>
     </resources>
