--- a/Beacon/Base.lproj/Main.storyboard
+++ b/Beacon/Base.lproj/Main.storyboard
@@ -355,7 +355,7 @@
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BDu-Zm-2GZ" customClass="CosmosView" customModule="Cosmos">
+                                                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BDu-Zm-2GZ" customClass="CosmosView" customModule="Cosmos">
                                                     <rect key="frame" x="23" y="-51" width="111" height="19"/>
                                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <userDefinedRuntimeAttributes>
@@ -399,13 +399,13 @@
                                                         <userDefinedRuntimeAttribute type="boolean" keyPath="updateOnTouch" value="NO"/>
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" misplaced="YES" text="Place Name Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Nc-Lr-ZgM">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Place Name Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Nc-Lr-ZgM">
                                                     <rect key="frame" x="23" y="-79" width="340" height="24"/>
                                                     <fontDescription key="fontDescription" name="Montserrat-SemiBold" family="Montserrat" pointSize="20"/>
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="restaurant_Icon" translatesAutoresizingMaskIntoConstraints="NO" id="g8h-R3-pJJ">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="restaurant_Icon" translatesAutoresizingMaskIntoConstraints="NO" id="g8h-R3-pJJ">
                                                     <rect key="frame" x="23" y="-118" width="36" height="36"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="36" id="1FD-fz-tO5"/>
@@ -952,26 +952,6 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jb0-Gp-vrZ">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GrX-Gc-LwH">
-                                        <rect key="frame" x="15" y="28" width="30" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="DDz-7o-Jdm"/>
-                                            <constraint firstAttribute="width" constant="30" id="DJV-Zc-1k7"/>
-                                        </constraints>
-                                        <connections>
-                                            <segue destination="oNf-Zv-LG5" kind="unwind" unwindAction="unwindToSearchBusinessVCWithSearch:" id="h1K-ba-iIb"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eOm-nH-mIq">
-                                        <rect key="frame" x="330" y="28" width="30" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="30" id="am0-E5-CeN"/>
-                                            <constraint firstAttribute="height" constant="30" id="yFO-Yh-gqW"/>
-                                        </constraints>
-                                        <connections>
-                                            <segue destination="Rch-Ge-B6E" kind="presentation" identifier="showLocationVC" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="zTt-Sa-yX3"/>
-                                        </connections>
-                                    </button>
                                     <textField opaque="NO" clipsSubviews="YES" alpha="0.65000000000000002" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Food, Tacos, Pho, etc..." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oMw-jd-g1M">
                                         <rect key="frame" x="66" y="28" width="243" height="30"/>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -982,18 +962,40 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GrX-Gc-LwH">
+                                        <rect key="frame" x="20" y="33" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="DDz-7o-Jdm"/>
+                                            <constraint firstAttribute="width" constant="20" id="DJV-Zc-1k7"/>
+                                        </constraints>
+                                        <state key="normal" image="nav_cancel"/>
+                                        <connections>
+                                            <segue destination="oNf-Zv-LG5" kind="unwind" unwindAction="unwindToSearchBusinessVCWithSearch:" id="h1K-ba-iIb"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eOm-nH-mIq">
+                                        <rect key="frame" x="336" y="33" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="20" id="am0-E5-CeN"/>
+                                            <constraint firstAttribute="height" constant="20" id="yFO-Yh-gqW"/>
+                                        </constraints>
+                                        <state key="normal" image="location_icon"/>
+                                        <connections>
+                                            <segue destination="Rch-Ge-B6E" kind="presentation" identifier="showLocationVC" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="zTt-Sa-yX3"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.32156862749999998" green="0.6705882353" blue="0.75294117650000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="GrX-Gc-LwH" firstAttribute="top" secondItem="Jb0-Gp-vrZ" secondAttribute="top" constant="28" id="13s-Hl-4ce"/>
-                                    <constraint firstAttribute="trailing" secondItem="eOm-nH-mIq" secondAttribute="trailing" constant="15" id="3Mc-lr-J0K"/>
+                                    <constraint firstItem="GrX-Gc-LwH" firstAttribute="top" secondItem="Jb0-Gp-vrZ" secondAttribute="top" constant="33" id="13s-Hl-4ce"/>
+                                    <constraint firstAttribute="trailing" secondItem="eOm-nH-mIq" secondAttribute="trailing" constant="19" id="3Mc-lr-J0K"/>
                                     <constraint firstItem="oMw-jd-g1M" firstAttribute="centerY" secondItem="Jb0-Gp-vrZ" secondAttribute="centerY" constant="8" id="ADI-dQ-DHA"/>
                                     <constraint firstAttribute="height" constant="70" id="UXI-1y-1hv"/>
-                                    <constraint firstAttribute="bottom" secondItem="eOm-nH-mIq" secondAttribute="bottom" constant="12" id="VJ9-OW-ROT"/>
-                                    <constraint firstAttribute="bottom" secondItem="GrX-Gc-LwH" secondAttribute="bottom" constant="12" id="g2F-bQ-5Gf"/>
-                                    <constraint firstItem="GrX-Gc-LwH" firstAttribute="leading" secondItem="Jb0-Gp-vrZ" secondAttribute="leading" constant="15" id="iBS-s4-wze"/>
+                                    <constraint firstAttribute="bottom" secondItem="eOm-nH-mIq" secondAttribute="bottom" constant="17" id="VJ9-OW-ROT"/>
+                                    <constraint firstAttribute="bottom" secondItem="GrX-Gc-LwH" secondAttribute="bottom" constant="17" id="g2F-bQ-5Gf"/>
+                                    <constraint firstItem="GrX-Gc-LwH" firstAttribute="leading" secondItem="Jb0-Gp-vrZ" secondAttribute="leading" constant="20" id="iBS-s4-wze"/>
                                     <constraint firstItem="oMw-jd-g1M" firstAttribute="centerX" secondItem="Jb0-Gp-vrZ" secondAttribute="centerX" id="pci-l6-5Qr"/>
-                                    <constraint firstItem="eOm-nH-mIq" firstAttribute="top" secondItem="Jb0-Gp-vrZ" secondAttribute="top" constant="28" id="xjb-5M-xOD"/>
+                                    <constraint firstItem="eOm-nH-mIq" firstAttribute="top" secondItem="Jb0-Gp-vrZ" secondAttribute="top" constant="33" id="xjb-5M-xOD"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -1033,7 +1035,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2MT-G8-M1s">
-                                <rect key="frame" x="15" y="68.5" width="345" height="529"/>
+                                <rect key="frame" x="15" y="69" width="345" height="529"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eBf-Ga-mAx">
                                         <rect key="frame" x="0.0" y="86" width="345" height="443"/>
@@ -1304,14 +1306,15 @@
     </scenes>
     <resources>
         <image name="add" width="51" height="51"/>
-        <image name="default_restaurant" width="16" height="16"/>
-        <image name="detail_action_add" width="16" height="16"/>
-        <image name="detail_action_call" width="16" height="16"/>
-        <image name="detail_action_route" width="16" height="16"/>
+        <image name="default_restaurant" width="640" height="426"/>
+        <image name="detail_action_add" width="49" height="48"/>
+        <image name="detail_action_call" width="37" height="55"/>
+        <image name="detail_action_route" width="57" height="61"/>
+        <image name="location_icon" width="14" height="22"/>
         <image name="more" width="26" height="6"/>
-        <image name="nav_cancel" width="16" height="16"/>
-        <image name="restaurant_Icon" width="16" height="16"/>
+        <image name="nav_cancel" width="30" height="31"/>
+        <image name="restaurant_Icon" width="128" height="128"/>
         <image name="sf" width="1500" height="830"/>
-        <image name="temp_rating" width="16" height="16"/>
+        <image name="temp_rating" width="149" height="30"/>
     </resources>
 </document>
