--- a/Beacon/InfoCell.xib
+++ b/Beacon/InfoCell.xib
@@ -1,22 +1,27 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <mutableArray key="Montserrat-Regular.otf">
+        <array key="Montserrat-Regular.otf">
             <string>Montserrat-Regular</string>
-        </mutableArray>
+        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="0.0" reuseIdentifier="infoCell" rowHeight="67" id="lFg-5A-Esg" customClass="InfoTableViewCell" customModule="Yelpify" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="0.0" reuseIdentifier="infoCell" rowHeight="67" id="lFg-5A-Esg" customClass="InfoTableViewCell" customModule="Beacon" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="400" height="62"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lFg-5A-Esg" id="ZyN-7n-a0h">
-                <rect key="frame" x="0.0" y="0.0" width="400" height="61.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="400" height="61"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BYU-Uk-kZq">
@@ -30,13 +35,13 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="123 Health Drive, Irvine CA 92617" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ghF-oo-QfE">
-                                <rect key="frame" x="59" y="22" width="327.5" height="17"/>
+                                <rect key="frame" x="59" y="22" width="328" height="17"/>
                                 <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="14"/>
-                                <color key="textColor" red="0.2274509804" green="0.4823529412" blue="0.54117647059999996" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.2274509804" green="0.4823529412" blue="0.54117647059999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="ghF-oo-QfE" firstAttribute="leading" secondItem="Dir-fK-9p7" secondAttribute="trailing" constant="14" id="2C5-zm-trp"/>
                             <constraint firstItem="Dir-fK-9p7" firstAttribute="leading" secondItem="BYU-Uk-kZq" secondAttribute="leading" constant="15" id="D1y-oC-twr"/>
@@ -46,18 +51,15 @@
                         </constraints>
                     </view>
                 </subviews>
-                <color key="backgroundColor" red="0.89543876259999999" green="0.89543876259999999" blue="0.89543876259999999" alpha="1" colorSpace="calibratedRGB"/>
+                <color key="backgroundColor" red="0.89543876259999999" green="0.89543876259999999" blue="0.89543876259999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstItem="BYU-Uk-kZq" firstAttribute="leading" secondItem="ZyN-7n-a0h" secondAttribute="leadingMargin" constant="-8" id="ISx-xC-Zce"/>
                     <constraint firstAttribute="trailingMargin" secondItem="BYU-Uk-kZq" secondAttribute="trailing" constant="-8" id="LWt-Uc-5J1"/>
                     <constraint firstItem="BYU-Uk-kZq" firstAttribute="top" secondItem="ZyN-7n-a0h" secondAttribute="topMargin" constant="-8" id="iPm-g3-NNr"/>
                     <constraint firstAttribute="bottomMargin" secondItem="BYU-Uk-kZq" secondAttribute="bottom" constant="-7.5" id="rDF-21-007"/>
                 </constraints>
-                <variation key="widthClass=compact" ambiguous="YES">
-                    <rect key="frame" x="0.0" y="0.0" width="400" height="111.5"/>
-                </variation>
             </tableViewCellContentView>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <connections>
                 <outlet property="icon" destination="Dir-fK-9p7" id="JVt-bM-QxT"/>
                 <outlet property="label" destination="ghF-oo-QfE" id="S4i-Am-xvk"/>
